<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="16dp"
    android:fitsSystemWindows="true"
    android:background="?android:windowBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:textColor="?android:textColorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_theme"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:textColor="?android:textColorPrimary"/>

    <RadioGroup
        android:id="@+id/rgThemeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbThemeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"/>

        <RadioButton
            android:id="@+id/rbThemeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"/>

        <RadioButton
            android:id="@+id/rbThemeSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_system"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swVibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Вибрация при смене статуса заказа"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:textColor="?android:textColorPrimary"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?android:windowBackground"
        app:cardElevation="2dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="О разработчике"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_info"
                android:lineSpacingExtra="4dp"
                android:textSize="14sp"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>